Fix social link spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -259,7 +259,7 @@ p a:hover {
 .bg-colorgame {
 	background: #5e5e5e;
 	background-image: url('../images/cards/colorgame-card.svg');
-	background-image: url('../images/cards/colorgame-card.svg'), linear-gradient(0deg, #576270, #182f7b);
+	background-image: url('../images/cards/colorgame-card.svg'), linear-gradient(0deg, #576270, #4682b4);
 	background-position: 40% 0%;
 }
 
